# traffic-analyzer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  mitm_agent.py
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: capture.rs  main.rs  parse.rs  send.rs
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: agent.rs  analysis.rs  doc.rs  geo.rs  mod.rs  queries.rs
deploy/: Dockerfile.api  Dockerfile.ingest  clickhouse-init.sql  deploy.sh  reclassify.sql  setup.sh
frontend/: index.html  package-lock.json  package.json  status  uuid  vite.config.ts
frontend/data/traffic/: flows
frontend/metadata/: default.sql  system  system.sql  traffic  traffic.sql
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: AdminPanel.tsx  AlertsView.tsx  AppView.tsx  DashboardPage.tsx  DeviceDetail.tsx  GeoMapPage.tsx  HttpView.tsx  InsightsBoard.tsx  KpiBox.tsx  LoadingState.tsx  OverviewFull.tsx  TimelineView.tsx  TopologyView.tsx  WeChatAnalysis.tsx
frontend/src/hooks/: useApi.ts
frontend/src/utils/: api.ts  geo.ts
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_152_152_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_153_153_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_154_154_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_155_155_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_156_156_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_157_157_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_158_158_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_159_159_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_160_160_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_161_161_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_162_162_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_163_163_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_164_164_0/: checksums.txt  data.cmrk4  minmax_926d86f3bb731d369d52ce4fef4654f4.idx  primary.cidx  serialization.json  ttl.txt
frontend/store/b61/b61dbfad-f13c-4e2d-9149-d3bfc316ba6a/202605_165_165_0/: checksums.txt  data.cmrk4  primary.cidx  serialization.json  (+2 more)
frontend/store/b92/b9236fe5-6405-420c-a952-a1b4326cb43c/: flows.sql
ingest/: Cargo.toml
ingest/src/: anomaly.rs  classifier.rs  dns_parser.rs  flow_agg.rs  http_parser.rs  main.rs  mysql_parser.rs  quic_parser.rs  redis_parser.rs  storage.rs  tcp_reasm.rs  tls_parser.rs
scripts/: lint-fix.sh
traffic-core/: Cargo.toml
traffic-core/src/: classifier.rs  lib.rs
(+785 files in other folders)
