[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
traffic_core = { path = "../traffic-core" }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = "3.4"
socket2 = "0.5"
libc = "0.2"
