[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
traffic_core = { path = "../traffic-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
actix-web = "4"
actix-cors = "0.7"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
