[package]
name = "ingest"
version.workspace = true
edition.workspace = true

[dependencies]
traffic_core = { path = "../traffic-core" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "sync", "io-util", "process"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
ring = "0.17"
aes = "0.8"
ctrlc = "3.4"
hex = "0.4"
clickhouse = "0.12"
reqwest = { version = "0.12", features = ["json"] }
